@@ -53,7 +53,7 @@
 The American Lottery - all you need is a dollar and a dream. We will 
 take the dollar, but you can keep the dream. 
 
-    Shlomi Fish
+Shlomi Fish
 </pre>
 <table class="info">
 <tbody>
