@@ -11,7 +11,7 @@
 <pre class="raw">The American Lottery - all you need is a dollar and a dream. We will 
 take the dollar, but you can keep the dream. 
 
-    Shlomi Fish
+Shlomi Fish
 </pre>
 </div>
 </body>
