@@ -7,6 +7,7 @@ use Test::More tests => 11;
 use Test::Differences;
 
 use File::Spec;
+use Encode;
 
 use XML::LibXML;
 use XML::LibXSLT;
@@ -48,6 +49,17 @@ sub read_file
     return $contents;
 }
 
+sub normalize_xml
+{
+    my $unicode = shift;
+
+    # Remove leading space (indentation), which seems to vary between 
+    # different versions of XML-LibXSLT and/or libxslt
+    $unicode =~ s{^[ \t]+}{}gms;
+
+    return $unicode;
+}
+
 foreach my $fn_base (@tests)
 {
     my $filename = "./t/data/xml/$fn_base.xml";
@@ -60,7 +72,7 @@ foreach my $fn_base (@tests)
 
     # TEST*$num_texts
     eq_or_diff (
-        $stylesheet->output_string($results),
+        normalize_xml($stylesheet->output_string($results)),
         read_file("./t/data/xhtml-results/$fn_base.xhtml"),
         "Testing for Good XSLTing of '$fn_base'",
     );
